--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask
-flask-sqlalchemy
-flask-cors
-flask-login
-yt-dlp
-gunicorn
+fastapi
+uvicorn
+ytmusicapi
+pytubefix
+sqlalchemy
 psycopg2-binary
+passlib[bcrypt]
